--- a/Views/Shared/_LayoutDashboard.cshtml
+++ b/Views/Shared/_LayoutDashboard.cshtml
@@ -19,7 +19,11 @@
 <div class="container">
 <div class="d-flex">
 <aside class="p2">
-    <p>yes</p>
+    <ul>
+        @{
+            foreach(var x in new List<string>{""})
+        }
+    </ul>
     
 
 </aside>
