--- a/Views/Auth/Register.cshtml
+++ b/Views/Auth/Register.cshtml
@@ -19,7 +19,7 @@
     <div class="container p2">
         <div class="formcontainer">
 
-            <h1>Log in</h1>
+            <h1>Maak een speleraccount aan</h1>
             
             @using (Html.BeginForm("Register", "Auth", FormMethod.Post))
     {
@@ -59,7 +59,7 @@
                         
                     </div>
                 <div class="form-buttonbar">                    
-                    <input type="submit" class="button button-red button-big" />
+                    <input type="submit" class="button button-red button-big" value="Maak speler account aan"/>
                     <a href="/Auth" class="button button-red-noborder">Log in</a>
                 </div>
             }
