--- a/Views/Dashboard/Profile/index.cshtml
+++ b/Views/Dashboard/Profile/index.cshtml
@@ -1,6 +1,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
     ViewData["title"] = "Profiel";
+    ViewData["active"] = "Profiel";
 }
 
 
