--- a/Views/Shared/_LayoutDashboard.cshtml
+++ b/Views/Shared/_LayoutDashboard.cshtml
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <title>@ViewData["title"] - Gotcha Dashboard</title>
     <link rel="stylesheet" href="~/css/site.css"/>
+     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <header>
