--- a/Views/Shared/_GameNav.cshtml
+++ b/Views/Shared/_GameNav.cshtml
@@ -26,7 +26,7 @@
             @{
                 
                 foreach(var x in links){
-                    <li><a href="/Games/@x.path">@x.linktext</a></li>
+                    <li><a href="@x.path">@x.linktext</a></li>
                 }
             }
         </ul>
