after game create feature

--- a/Views/Shared/_GameNav.cshtml
+++ b/Views/Shared/_GameNav.cshtml
@@ -13,7 +13,7 @@
     };
     if (gameleaderrights){
         links.Add(new Link("Spellen die ik beheer", "Mygamesgl"));
-        links.Add(new Link("Maak een spel", "GameCreate"));
+        links.Add(new Link("Maak een spel", "CreateGame"));
     }
 }
 
