--- a/Views/Home/Introduction.cshtml
+++ b/Views/Home/Introduction.cshtml
@@ -9,8 +9,9 @@
     var info = new List<string>{
         "Log in of maak een account aan", 
         "Zoek naar spellen bij jou in de buurt", 
-        "Volgende stap", 
-        "Volgende stap"};
+        "Neem deel aan een spel", 
+        "Schakel je doelwitten uit",
+        "profit"};
 }
 
 
