--- a/Views/Shared/_GameNav.cshtml
+++ b/Views/Shared/_GameNav.cshtml
@@ -9,7 +9,7 @@
     var links = new List<Link>{
        new Link("Alle spellen", "Games"),
        new Link("Zoek naar een spel", "Findgame"),
-        new Link("Spellen waar ik deel aan neem", "Mygamespl")
+        new Link("Spellen waar ik deel aan neem", "Mygamespl"),
     };
     if (gameleaderrights){
         links.Add(new Link("Spellen die ik beheer", "Mygamesgl"));
