--- a/Views/Shared/_LayoutDashboard.cshtml
+++ b/Views/Shared/_LayoutDashboard.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["title"] - Gotcha Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/css/site.css"/>
      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
