--- a/Views/Dashboard/Game/Detail.cshtml
+++ b/Views/Dashboard/Game/Detail.cshtml
@@ -4,29 +4,26 @@
 
 
 @{
-
     Game game = (Game)ViewData["game"];
-    
     ViewData["NavDark"] = true;
     ViewData["Title"] = game.Title;
     var owner = Convert.ToBoolean(ViewData["owner"]);
     var inGame = Convert.ToBoolean(ViewData["playerInGame"]);
-    ViewData["playercount"] = game.GetPlayerCount();
-    ViewData["players"] = game.Players;
     ViewData["playereliminated"] = game.isPlayerEliminated(Convert.ToString(ViewData["alias"]));
-    ViewData["Gameid"] = game.GameId;
     ViewData["render_db_home"] = true;
-    ViewData["Description"] = game.Description;
-    ViewData["gameleaderalias"] = game.GameLeader.alias;
-    ViewData["gameactive"] = game.Active;
     var alias = HttpContextAccessor.HttpContext.Session.GetString("alias");
+    Contract cont = null;
+    if(game.Active && inGame && !owner){
+        cont = game.GetPlayerContract(alias);
+    }
+    
 }
 
-<partial name="_GameDetail"></partial>
+<partial name="_GameDetail" model="@game"></partial>
 
 
 
-<div class="container p2">
+<div class="container p2 contract-sect">
     
     @if (owner){
      <div class="grid-container">
@@ -58,15 +55,21 @@
      </div>
 
 }else{
-    if(inGame){
-        var c = game.GetPlayerContract(alias);
-        <div class="mycontract-container">
-            <h3>Jouw contract:</h3>
-            <h5>De alias van je doelwit is: @c.Target.alias</h5>
-            <h5>De naam van je doelwit is: @c.Target.toString()</h5>
-        </div>
-    }
-    
+    <h3>Jouw contract:</h3>
+    <div class="mycontract-container">
+        <h3>Doelwit</h3>
+        @if(inGame && game.Active){
+            
+            
+            
+                
+                <p>De alias van je doelwit is: @cont.Target.alias</p>
+                <p>De naam van je doelwit is: @cont.Target.toString()</p>
+            
+        }else{
+            <p>Je krijgt een contract toegewezen als het spel begonnen is.</p>
+        }
+    </div>
 }
 
 
